# HapticConsolePlugin

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
Source/: MidiMapper.cpp  MidiMapper.h  OscMapper.cpp  OscMapper.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/UI/: index.html  main.js  package.json  tsconfig.json  vite.config.ts
Source/UI/src/: App.tsx  bridge.ts  main.tsx  params.ts  settings.ts  style.css  types.d.ts
Source/UI/src/components/: CCStrip.tsx  Flywheel.tsx  Settings.tsx
src/: bridge.ts  main.tsx  params.ts  style.css  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  mapping.rs  midi.rs  osc.rs
src-tauri/src/tests/: integration.rs  mapping.rs  midi.rs  mod.rs
src/components/: Joystick.tsx  Settings.tsx
