[package]
name = "haptic-console"
version = "0.1.0"
description = "Haptic Console visualiser and mapper"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "haptic_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = [] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
log         = "0.4"
tauri-plugin-log = "2"
midir       = "0.10"
parking_lot = "0.12"
